使用redis存储hashid用于登录

--- a/views/index.html
+++ b/views/index.html
@@ -6,5 +6,8 @@
 	<body>
 		<h1>欢迎来到首页</h1>
 		<p>this index page</p>
+		<script type="text/javascript">
+			console.log(document.cookie);
+		</script>
 	</body>
 </html>
