--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>首页</title>
+		<title>LIKEREAD</title>
+		<link rel="stylesheet" href="./stylesheets/index.css"/>
 	</head>
 	<body>
-		<h1>欢迎来到首页</h1>
-		<p>this index page</p>
-		<script type="text/javascript">
-			console.log(document.cookie);
-		</script>
+
+		<div id="container">
+			<!-- <div class="left_div_container"></div> -->
+			<div  class="middle_div_container"></div>
+			<div class="right_div_container"></div>
+		</div>
+		<script src="./javascripts/index.js"></script>
 	</body>
 </html>
