--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
 			<div  class="middle_div_container"></div>
 			<div class="right_div_container"></div>
 		</div>
-		<script src="./javascripts/index.js"></script>
+		<script src="./wp/views/manifest.js"></script>
+		<script src="./wp/views/index.js"></script>
 	</body>
 </html>
