--- a/views/articleWrite.html
+++ b/views/articleWrite.html
@@ -4,9 +4,12 @@
 		<title>LIKEREAD文章编辑</title>
 	</head>
 	<body>
+		<div style="position:fixed;font-size:24px;width:100px;color:red;top:25px;left:30px;">
+			<a style="display:inline-block;text-decoration: none;color:red;" href="../index">首页</a>	
+		</div>
 		<div id="container">
 			<form action="articlepublish">
-				<div><input type="text" placeholder="标题"/></div>
+				<div><input type="text" id="title" placeholder="标题"/></div>
 				<textarea id="editorArea"></textarea>
 				<div><button class="savebutton" type="submit">发布</button><span class="showsavemsg">已实时保存</span></div>
 			</form>
