--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -38,9 +38,33 @@ body,html{
 	margin-top:62px;
 }
 
-li{
+.middle_div_container ul li{
+	width:780px;
 	height:200px;
+	margin-top:40px;
 	list-style-type: none;
+	border-bottom: 1px solid rgb(240,240,240);
+}
+
+
+.middle_div_container ul li p:nth-child(1){
+	float:left;
+	height:40px;
+}
+
+.middle_div_container ul li p:nth-child(2){
+	height:30px;
+	clear:both;
+	font-size:20px;
+	color:rgb(51,51,51);
+	font-weight:600;
+}
+
+.middle_div_container ul li p:nth-child(3){
+	height:50px;
+	font-size:16px;
+	font-weight:300px;
+	line-height:25px;
 }
 
 
