--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -47,20 +47,49 @@ body,html{
 }
 
 
-.middle_div_container ul li p:nth-child(1){
-	float:left;
-	height:40px;
+.middle_div_container ul li div:nth-child(1){
+	vertical-align: middle;
+	height:30px;
+	margin-bottom:10px;
 }
 
-.middle_div_container ul li p:nth-child(2){
+
+.middle_div_container ul li div:nth-child(1) span{
+	display: inline-block;
+	height:30px;
+	vertical-align: middle;
+	margin-right:10px;
+}
+
+
+.middle_div_container ul li div:nth-child(1) div{
+	display: inline-block;
+	vertical-align: middle;
+	height:30px;
+	line-height: 30px;
+}
+
+
+
+.middle_div_container ul li div:nth-child(1) img{
+	display: inline-block;
+	width:30px;
+	height:30px;
+	vertical-align: middle;
+	margin-right:15px;
+	border-radius: 50%
+}
+
+
+.middle_div_container ul li div:nth-child(2){
 	height:30px;
 	clear:both;
-	font-size:20px;
+	font-size:18px;
 	color:rgb(51,51,51);
-	font-weight:600;
+	font-weight:700;
 }
 
-.middle_div_container ul li p:nth-child(3){
+.middle_div_container ul li div:nth-child(3){
 	height:50px;
 	font-size:16px;
 	font-weight:300px;
@@ -68,6 +97,16 @@ body,html{
 }
 
 
+.middle_div_container ul li a{
+	color:black;
+	font-size-size:20px;
+	font-weight:600px;
+	text-decoration: none;
+}
+
+.middle_div_container ul li a:hover{
+	border-bottom: 1px solid;
+}
 
 
 
