--- a/views/articleWrite.html
+++ b/views/articleWrite.html
@@ -15,7 +15,8 @@
 			</form>
 		</div>
 		<script src="../javascripts/dist/manifest.js"></script>
-      	<script src="../javascripts/dist/vendor.js"></script>
+		  <script src="../javascripts/dist/vendor.js"></script>
+		  <script src="../javascripts/simplemde.js"></script>
 		<script src="../javascripts/dist/articleWrite.js"></script>
 	</body>
 </html>
